# sem2-lab6

./: CMakeLists.txt  main.c
include/: input.h  list.h  numbers.h
source/: input.c  list.c  numbers.c
